CAN_Protocol/.metadata/.plugins/org.eclipse.cdt.ui/Tx_Loopback_Mode.build.log
01:34:01 **** Incremental Build of configuration Debug for project Tx_Loopback_Mode ****
make -j8 all 
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DSTM32 -DSTM32F1 -DSTM32F103C6Tx -DDEBUG -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/main.o"
arm-none-eabi-gcc "../Src/stm32f1xx_hal_msp.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DSTM32 -DSTM32F1 -DSTM32F103C6Tx -DDEBUG -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/stm32f1xx_hal_msp.d" -MT"Src/stm32f1xx_hal_msp.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/stm32f1xx_hal_msp.o"
arm-none-eabi-gcc "../Src/stm32f1xx_it.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DSTM32 -DSTM32F1 -DSTM32F103C6Tx -DDEBUG -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/stm32f1xx_it.d" -MT"Src/stm32f1xx_it.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/stm32f1xx_it.o"
arm-none-eabi-gcc "../Src/system_stm32f1xx.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DSTM32 -DSTM32F1 -DSTM32F103C6Tx -DDEBUG -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/system_stm32f1xx.d" -MT"Src/system_stm32f1xx.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/system_stm32f1xx.o"
In file included from ../Inc/../Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_rcc.h:29:0,
                 from ../Inc/stm32f1xx_hal_conf.h:237,
                 from ../Inc/../Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal.h:30,
                 from ../Inc/main.h:32,
                 from ../Src/main.c:21:
../Inc/../Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_def.h:30:10: fatal error: stm32f1xx.h: No such file or directory
 #include "stm32f1xx.h"
          ^~~~~~~~~~~~~
compilation terminated.
make: *** [Src/subdir.mk:33: Src/main.o] Error 1
make: *** Waiting for unfinished jobs....
In file included from ../Inc/../Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_rcc.h:29:0,
                 from ../Inc/stm32f1xx_hal_conf.h:237,
                 from ../Inc/../Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal.h:30,
                 from ../Inc/main.h:32,
                 from ../Src/stm32f1xx_hal_msp.c:23:
../Inc/../Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_def.h:30:10: fatal error: stm32f1xx.h: No such file or directory
 #include "stm32f1xx.h"
          ^~~~~~~~~~~~~
compilation terminated.
make: *** [Src/subdir.mk:35: Src/stm32f1xx_hal_msp.o] Error 1
In file included from ../Inc/../Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_rcc.h:29:0,
                 from ../Inc/stm32f1xx_hal_conf.h:237,
                 from ../Inc/../Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal.h:30,
                 from ../Inc/main.h:32,
                 from ../Src/stm32f1xx_it.c:22:
../Inc/../Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_def.h:30:10: fatal error: stm32f1xx.h: No such file or directory
 #include "stm32f1xx.h"
          ^~~~~~~~~~~~~
compilation terminated.
make: *** [Src/subdir.mk:37: Src/stm32f1xx_it.o] Error 1
In file included from ../Src/system_stm32f1xx.c:59:0:
../Src/../Drivers/CMSIS/Device/ST/STM32F1xx/Include/stm32f1xx.h:141:3: error: #error "Please select first the target STM32F1xx device used in your application (in stm32f1xx.h file)"
  #error "Please select first the target STM32F1xx device used in your application (in stm32f1xx.h file)"
   ^~~~~
../Src/system_stm32f1xx.c: In function 'SystemCoreClockUpdate':
../Src/system_stm32f1xx.c:244:9: error: 'RCC' undeclared (first use in this function)
   tmp = RCC->CFGR & RCC_CFGR_SWS;
         ^~~
../Src/system_stm32f1xx.c:244:9: note: each undeclared identifier is reported only once for each function it appears in
../Src/system_stm32f1xx.c:244:21: error: 'RCC_CFGR_SWS' undeclared (first use in this function)
   tmp = RCC->CFGR & RCC_CFGR_SWS;
                     ^~~~~~~~~~~~
../Src/system_stm32f1xx.c:257:29: error: 'RCC_CFGR_PLLMULL' undeclared (first use in this function); did you mean 'RCC_CFGR_SWS'?
       pllmull = RCC->CFGR & RCC_CFGR_PLLMULL;
                             ^~~~~~~~~~~~~~~~
                             RCC_CFGR_SWS
../Src/system_stm32f1xx.c:258:31: error: 'RCC_CFGR_PLLSRC' undeclared (first use in this function); did you mean 'RCC_CFGR_PLLMULL'?
       pllsource = RCC->CFGR & RCC_CFGR_PLLSRC;
                               ^~~~~~~~~~~~~~~
                               RCC_CFGR_PLLMULL
../Src/system_stm32f1xx.c:276:26: error: 'RCC_CFGR_PLLXTPRE' undeclared (first use in this function); did you mean 'RCC_CFGR_PLLSRC'?
         if ((RCC->CFGR & RCC_CFGR_PLLXTPRE) != (uint32_t)RESET)
                          ^~~~~~~~~~~~~~~~~
                          RCC_CFGR_PLLSRC
../Src/system_stm32f1xx.c:334:37: error: 'RCC_CFGR_HPRE' undeclared (first use in this function); did you mean 'RCC_CFGR_SWS'?
   tmp = AHBPrescTable[((RCC->CFGR & RCC_CFGR_HPRE) >> 4U)];
                                     ^~~~~~~~~~~~~
                                     RCC_CFGR_SWS
make: *** [Src/subdir.mk:43: Src/system_stm32f1xx.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.

01:34:04 Build Failed. 15 errors, 0 warnings. (took 2s.567ms)

